# OpencvExample

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BitmapMatUtils.cpp  BitmapMatUtils.h  cardocr.cpp  cardocr.h  native-lib.cpp
app/src/main/java/zeller/com/opencvexample/: BankCardOcr.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
